Enhance card passing mechanics and UI in GameActor
- Added `PassingDirection` property and `ChangePassingDirection` method to `GameActor` for managing card passing direction.
- Updated `AddPlayer` to create `BotPlayer` instances.
- Modified `Map` method to accept `workflowInstanceId` and return a `Game` object with passing direction.
- Introduced `PassCards` method in `GameActor` for handling card passing logic.
- Updated `IGameActor` interface to include `PassCards` and modified `Map` signature.
- Added `SelectCardsToPass` method in `Round` class for bot card selection.
- Enhanced `RoundPlayer` with `CardsToPass` property to track cards intended for passing.
- Updated `Game` record to include `WorkflowInstanceId` and `PassingDirection`.
- Added `PassCards` method in `SignalRService` for sending card passing events.
- Modified `GameHub` to handle card passing events.
- Introduced new classes like `CardsPassedEvent` and `StartNewRoundActivityOutput` for workflow management.
- Updated CSS for card animations and layout improvements.
- Added JavaScript for card animations during passing.
- Updated unit tests to reflect method signature changes and new functionality.

--- a/src/Hearts.BlazorApp/wwwroot/index.html
+++ b/src/Hearts.BlazorApp/wwwroot/index.html
@@ -11,6 +11,7 @@
     <link href="manifest.webmanifest" rel="manifest" />
     <link rel="apple-touch-icon" sizes="any" href="favicon.svg" />
     <script src="js/localStorage.js"></script>
+    <script src="js/site.js"></script>
 </head>
 
 <body>
