--- a/src/Hearts.BlazorApp/wwwroot/index.html
+++ b/src/Hearts.BlazorApp/wwwroot/index.html
@@ -10,11 +10,12 @@
     <link rel="icon" type="image/svg+xml" href="favicon.svg" />
     <link href="manifest.webmanifest" rel="manifest" />
     <link rel="apple-touch-icon" sizes="any" href="favicon.svg" />
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css">
+    <link href="https://fonts.googleapis.com/css2?family=Open+Sans&display=swap" rel="stylesheet">
     <script src="js/localStorage.js"></script>
     <script src="js/site.js"></script>
 </head>
-
-<body>
+<body class="pt-32" style="font-family: 'Open Sans', -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, 'Helvetica Neue', Arial, sans-serif, 'Apple Color Emoji', 'Segoe UI Emoji', 'Segoe UI Symbol';">
     <div id="app">
         <svg class="loading-progress">
             <circle r="40%" cx="50%" cy="50%" />
