--- a/src/Hearts.BlazorApp/wwwroot/index.html
+++ b/src/Hearts.BlazorApp/wwwroot/index.html
@@ -15,18 +15,18 @@
     <script src="js/localStorage.js"></script>
     <script src="js/site.js"></script>
 </head>
-<body class="pt-32" style="font-family: 'Open Sans', -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, 'Helvetica Neue', Arial, sans-serif, 'Apple Color Emoji', 'Segoe UI Emoji', 'Segoe UI Symbol';">
+<body class="bg-white dark:bg-stone-900" style="font-family: 'Open Sans', -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, 'Helvetica Neue', Arial, sans-serif, 'Apple Color Emoji', 'Segoe UI Emoji', 'Segoe UI Symbol';">
     <div id="app">
         <svg class="loading-progress">
             <circle r="40%" cx="50%" cy="50%" />
             <circle r="40%" cx="50%" cy="50%" />
         </svg>
-        <div class="loading-progress-text"></div>
+        <div class="loading-progress-text dark:!text-gray-300"></div>
     </div>
 
     <div id="blazor-error-ui">
         An unhandled error has occurred.
-        <a href="." class="reload text-3xl">Reload</a>
+        <a href="." class="reload text-3xl dark:!text-gray-300">Reload</a>
         <span class="dismiss">🗙</span>
     </div>
     <script src="_framework/blazor.webassembly.js"></script>
